--- a/apache/Jenkinsfile
+++ b/apache/Jenkinsfile
@@ -6,6 +6,7 @@ metadata:
     run: kubernetes
   name: kubernetes
 spec:
+  serviceAccount: kubernetes
   containers:
   - image: kaizenacademy/mycommand:1.0.0
     name: kubernetes
